--- a/admin_dashboard/templates/cakes/list.html
+++ b/admin_dashboard/templates/cakes/list.html
@@ -26,6 +26,7 @@
                 <table class="table">
                     <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Name</th>
                         <th class="text-right">Actions</th>
                     </tr>
@@ -33,6 +34,7 @@
                     <tbody>
                     {% for obj in objects %}
                         <tr>
+                            <td>{{ obj.id }}</td>
                             <td>{{ obj }}</td>
                             <td class="td-actions text-right">
                                 <a class="btn btn-info btn-sm btn-icon" href="{% url 'admin_dashboard_cakes_detail' obj.pk %}">
