--- a/admin_dashboard/templates/employees/form.html
+++ b/admin_dashboard/templates/employees/form.html
@@ -13,6 +13,9 @@
                     <h2 class="card-title">{{ page_title }}</h2>
                 </div>
                 <div class="card-body">
+                    {% if messages %} {% for m in messages %}
+                        <div class="alert alert-{{ m.tags }}">{{ m }}</div>
+                    {% endfor %} {% endif %}
                     <form method="post">
                         {% csrf_token %}
 
