--- a/admin_dashboard/templates/accounts/detail.html
+++ b/admin_dashboard/templates/accounts/detail.html
@@ -25,12 +25,12 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="card-category">{{ obj.created }}</h5>
-                    <h2 class="card-title">{{ page_title }} Detail</h2>
+                    <h5 class="card-category"> </h5>
+                    <h2 class="card-title">{{ obj.name }}</h2>
                 </div>
                 <div class="card-body">
-                    <h4 class="card-title">{{ obj.name }}</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">Name</h6>
+                    <h4 class="card-title">{{ obj.user_type }}</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">User Type</h6>
                 </div>
             </div>
         </div>
