--- a/admin_dashboard/templates/cake_images/detail.html
+++ b/admin_dashboard/templates/cake_images/detail.html
@@ -25,8 +25,8 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="card-category">{{ obj.created }}</h5>
-                    <h2 class="card-title">{{ page_title }} Detail</h2>
+                    <h5 class="card-category"> </h5>
+                    <h2 class="card-title">{{ obj.name }}</h2>
                 </div>
                 <div class="card-body">
                     <h4 class="card-title">{{ obj.name }}</h4>
@@ -57,6 +57,19 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="card-category"></h5>
+                    <h2 class="card-title">Preview</h2>
+                </div>
+                <div class="card-body">
+                    <img src="{{ obj.image.url }}" class="img-responsive" width="200px">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="card">
         <div class="card-header">
@@ -64,10 +77,11 @@
         </div>
         <div class="card-body">
             <a class="btn btn-info btn-sm btn-icon" href="{% url 'admin_dashboard_cake_images_list' %}"
-                title="View List">
+               title="View List">
                 <i class="tim-icons icon-bullet-list-67"></i>
             </a>
-            <a class="btn btn-success btn-sm btn-icon" href="{% url 'admin_dashboard_cake_images_update' obj.pk %}" title="Update Cake Image">
+            <a class="btn btn-success btn-sm btn-icon" href="{% url 'admin_dashboard_cake_images_update' obj.pk %}"
+               title="Update Cake Image">
                 <i class="tim-icons icon-settings"></i>
             </a>
             <a class="btn btn-danger btn-sm btn-icon" href="{% url 'admin_dashboard_cake_images_delete' obj.pk %}"
