--- a/admin_dashboard/templates/cakes/detail.html
+++ b/admin_dashboard/templates/cakes/detail.html
@@ -25,12 +25,14 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="card-category">{{ obj.created }}</h5>
-                    <h2 class="card-title">{{ page_title }} Detail</h2>
+                    <h5 class="card-category"> </h5>
+                    <h2 class="card-title">{{ obj.name }} </h2>
                 </div>
                 <div class="card-body">
-                    <h4 class="card-title">{{ obj.name }}</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">Name</h6>
+                    <h4 class="card-title">{{ obj.category }}</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Category</h6>
+                    <h4 class="card-title">{{ obj.price }}</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Price</h6>
                 </div>
             </div>
         </div>
@@ -63,11 +65,16 @@
             <h4 class="card-title">Actions</h4>
         </div>
         <div class="card-body">
+            <a class="btn btn-info btn-sm btn-icon" href="{% url 'admin_dashboard_cake_images_create' obj.pk %}"
+               title="Add Image">
+                <i class="tim-icons icon-image-02"></i>
+            </a>
             <a class="btn btn-info btn-sm btn-icon" href="{% url 'admin_dashboard_cakes_list' %}"
-                title="View List">
+               title="View List">
                 <i class="tim-icons icon-bullet-list-67"></i>
             </a>
-            <a class="btn btn-success btn-sm btn-icon" href="{% url 'admin_dashboard_cakes_update' obj.pk %}" title="Update Cake">
+            <a class="btn btn-success btn-sm btn-icon" href="{% url 'admin_dashboard_cakes_update' obj.pk %}"
+               title="Update Cake">
                 <i class="tim-icons icon-settings"></i>
             </a>
             <a class="btn btn-danger btn-sm btn-icon" href="{% url 'admin_dashboard_cakes_delete' obj.pk %}"
